--- a/compose.yaml
+++ b/compose.yaml
@@ -7,7 +7,7 @@ services:
     environment:
       POSTGRES_DB: allow-half
       POSTGRES_USER: allow-half
-      POSTGRES_PASSWORD: /run/secrets/db_password
+      POSTGRES_PASSWORD_FILE: /run/secrets/db_password
     restart: unless-stopped
     healthcheck:
       test: ['CMD', 'pg_isready', '-U', 'myuser']
