chore: check bellow
- Added Icon plugin for `Edge`.
- Created provider for DAO abstraction.
- Setup npm script for migrations.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "node ace build",
     "dev": "node ace serve --hmr",
     "test": "node ace test",
+    "migrations:fresh": "node ace migration:fresh --seed --force",
     "lint": "eslint .",
     "format": "prettier --write .",
     "typecheck": "tsc --noEmit"
@@ -60,8 +61,10 @@
     "@adonisjs/shield": "^8.1.2",
     "@adonisjs/static": "^1.1.1",
     "@adonisjs/vite": "^4.0.0",
+    "@iconify-json/heroicons": "^1.2.2",
     "@tailwindcss/vite": "^4.0.12",
     "@vinejs/vine": "^3.0.0",
+    "edge-iconify": "^2.0.1",
     "edge.js": "^6.2.1",
     "luxon": "^3.5.0",
     "pg": "^8.13.3",
