--- a/.prettierrc
+++ b/.prettierrc
@@ -1,3 +1,13 @@
 {
-  "plugins": ["prettier-plugin-organize-imports", "prettier-plugin-tailwindcss"]
+  "tabWidth": 2,
+  "trailingComma": "es5",
+  "semi": false,
+  "singleQuote": true,
+  "useTabs": false,
+  "quoteProps": "consistent",
+  "bracketSpacing": true,
+  "arrowParens": "always",
+  "printWidth": 180,
+  "tailwindStylesheet": "./resources/css/app.css",
+  "plugins": ["prettier-plugin-edgejs", "prettier-plugin-organize-imports", "prettier-plugin-tailwindcss"]
 }
