--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "node ace build",
     "dev": "node ace serve --hmr",
     "test": "node ace test",
+    "migrations:fresh": "node ace migration:fresh --seed --force",
     "lint": "eslint .",
     "format": "prettier --write .",
     "typecheck": "tsc --noEmit"
@@ -46,6 +47,9 @@
     "hot-hook": "^0.4.0",
     "pino-pretty": "^13.0.0",
     "prettier": "^3.5.0",
+    "prettier-plugin-edgejs": "^1.0.0",
+    "prettier-plugin-organize-imports": "^4.1.0",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "ts-node-maintained": "^10.9.5",
     "typescript": "~5.7",
     "vite": "^6.1.0"
@@ -58,17 +62,21 @@
     "@adonisjs/shield": "^8.1.2",
     "@adonisjs/static": "^1.1.1",
     "@adonisjs/vite": "^4.0.0",
+    "@iconify-json/heroicons": "^1.2.2",
+    "@tailwindcss/vite": "^4.0.12",
     "@vinejs/vine": "^3.0.0",
+    "edge-iconify": "^2.0.1",
     "edge.js": "^6.2.1",
     "luxon": "^3.5.0",
     "pg": "^8.13.3",
-    "reflect-metadata": "^0.2.2"
+    "randexp": "^0.5.3",
+    "reflect-metadata": "^0.2.2",
+    "tailwindcss": "^4.0.12"
   },
   "hotHook": {
     "boundaries": [
       "./app/controllers/**/*.ts",
       "./app/middleware/*.ts"
     ]
-  },
-  "prettier": "@adonisjs/prettier-config"
+  }
 }
