--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   "dependencies": {
     "@adonisjs/auth": "^9.3.1",
     "@adonisjs/core": "^6.17.2",
+    "@adonisjs/drive": "^3.2.0",
     "@adonisjs/lucid": "^21.6.0",
     "@adonisjs/session": "^7.5.1",
     "@adonisjs/shield": "^8.1.2",
